<resources>
    <string name="app_name">DAM_Examen_Final_Villanueva</string>
    <string name="txt_username" />
    <string name="txt_password" />
    <string name="btnLogin">Entrar</string>
    <string name="lbl_forgot">¿Olvidate tu contraseña?</string>
    <string name="lbl_o">O</string>
    <string name="lbl_face">Ingresa con Facebook</string>
    <string name="lbl_cuenta">No tienes una cuenta? Registrate</string>
    <string name="title_activity_notas">NotasActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_notas">Notas</string>
    <string name="title_favoritas">Favoritas</string>
    <string name="title_user_profile">Mi Perfil</string>
    <string name="lbl_titulo">Titulo</string>
    <string name="lbl_contenido">Contenido</string>
    <string name="lbl_content">Contenido</string>
</resources>